<resources>
    <string name="app_name">MoyaApp2</string>
    <string name="login">Inicio de Sesión</string>
    <string name="labelFirstName">Nombre</string>
    <string name="LabelApellido">Apellido</string>
    <string name="labelApodo">Apodo</string>
    <string name="labelPass">Contraseña</string>
    <string name="labelEmail">Email</string>
    <string name="labelPhone">Teléfono</string>
    <string name="labelAge">Edad</string>
    <string name="labelBirth">Día Nacimiento</string>
    <string name="labelGender">Sexo</string>
    <string name="labelConfig">Configuración</string>
    <string name="labelARView">AR View</string>
    <string name="labelDescripcion">Descripción</string>
    <string name="labelPerfilPublico">Perfil Publico</string>
    <string name="radioHombre">Hombre</string>
    <string name="radioMujer">Mujer</string>
    <string name="regiterLink">No tienes una cuenta? Crea una</string>
    <string name="loginLink">Ya tienes una cuenta? Inicia sesión</string>
    <string name="cambioPass">Olvidaste la contraseña?</string>
    <string name="ingresar">Ingresar</string>
    <string name="registro">Registro</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bienvenida">Bienvenido a la App de JP Moya!!</string>
    <string name="nouser">No User</string>
    <string name="hint_correo">tucorreo@correo.com</string>
    <string name="hint_pass">Password</string>
    <string name="hint_name">Isaac</string>
    <string name="hint_last_name">Asimov</string>
    <string name="hint_apodo">H.S.</string>
    <string name="hint_phone">55893654</string>
    <string name="hint_age">17</string>
    <string name="hint_birth">da/mo/year</string>
    <string name="hint_mi_descripcion">QWERTY</string>
    <string name="hint_AR">AR action</string>
    <string name="check">Magic</string>


    <string name="passAcces">Administrador de contraseñas</string>
    <string name="pass">Contraseñas</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nuevo">Nuevo</string>
</resources>